// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates bundle for graphql@14.0.0 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [],
        "size": 234000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [],
        "size": 234000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [],
        "size": 234000,
      },
    },
  },
  "name": "graphql",
  "peerDependencies": {},
  "version": "14.0.0",
}
`;

exports[`creates bundle for graphql@15.5.1 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [],
        "size": 255000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [],
        "size": 255000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [],
        "size": 255000,
      },
    },
  },
  "name": "graphql",
  "peerDependencies": {},
  "version": "15.5.1",
}
`;
